--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Boolando</title>
 </head>
+
 <body>
 
     <header>
-        <div class="top-header-flex"> 
-            <nav>
+        <!-- top-header -->
+        <div class="top-header-flex">
+            <nav class="nav-header">
                 <a href="#">Donna</a>
                 <a href="#" class="padding-left">Uomo</a>
                 <a href="#" class="padding-left">Bambini</a>
@@ -26,16 +29,122 @@
             </div>
         </div>
     </header>
-
+    <!-- --------------------------------- -->
     <main>
+        <!-- Main content -->
+        <div class="main-container">
+            <div class="images container 1">
+                <img src="./images-boolando/img/1.webp" alt="image1a" class="image first-a">
+                <img src="./images-boolando/img/1b.webp" alt="image1b" class="image-b">
+                <p class="red">-50%</p>
+                <p class="green">Sostenibilita</p>
+                <div class="solid-heart">
+                    <i class="fa-solid fa-heart padding-right"></i>
+                </div>
+                <div class="descripton">
+                    <p class="brand">Levi's</p>
+                    <p class="style">RELAXED FIT TEE UNISEX</p>
+                    <p class="d-price">14,99 &euro;</p>
+                    <p class="price">29,99 &euro;</p>
+                </div>
 
+            </div>
+            <div class="images container 2">
+                <img src="./images-boolando/img/2.webp" alt="image2a" class="image second-a">
+                <img src="./images-boolando/img/2b.webp" alt="image2b" class="image-b">
+                <p class="red">-50%</p>
+                <div class="solid-heart">
+                    <i class="fa-solid fa-heart padding-right"></i>
+                </div>
+                <div class="descripton">
+                    <p class="brand">Guess</p>
+                    <p class="style">ROSE TEE</p>
+                    <p class="d-price">22,99 &euro;</p>
+                    <p class="price">29,99 &euro;</p>
+                </div>
+            </div>
+            <div class="images container 3">
+                <img src="./images-boolando/img/3.webp" alt="image3a" class="image third-a">
+                <img src="./images-boolando/img/3b.webp" alt="image3b" class="image-b">
+                <p class="red">-50%</p>
+                <div class="solid-heart">
+                    <i class="fa-solid fa-heart padding-right"></i>
+                </div>
+                <div class="descripton">
+                    <p class="brand">Come Zucchero Filato</p>
+                    <p class="style">VOGLIA DI COLORI PASTELLO</p>
+                    <p class="d-price">129,99 &euro;</p>
+                    <p class="price">184,99 &euro;</p>
+                </div>
+            </div>
+            <div class="images container 4">
+                <img src="./images-boolando/img/4.webp" alt="image4a" class="image forth-a">
+                <img src="./images-boolando/img/4b.webp" alt="image4b" class="image-b">
+                <p class="red">-50%</p>
+                <p class="green">Sostenibilita</p>
+                <div class="solid-heart">
+                    <i class="fa-solid fa-heart padding-right"></i>
+                </div>
+                <div class="descripton">
+                    <p class="brand">Levi's</p>
+                    <p class="style">TEE UNISEX</p>
+                    <p class="d-price">14,99 &euro;</p>
+                    <p class="price">29,99 &euro;</p>
+                </div>
+            </div>
+            <div class="images container 5">
+                <img src="./images-boolando/img/5.webp" alt="image5a" class="image fifth-a">
+                <img src="./images-boolando/img/5b.webp" alt="image5b" class="image-b">
+                <div class="solid-heart">
+                    <i class="fa-solid fa-heart padding-right"></i>
+                </div>
+                <div class="descripton">
+                    <p class="brand">Maya Deluxe</p>
+                    <p class="style">STRIP BODICE</p>
+                    <p class="d-price">99,99 &euro;</p>
+                </div>
+            </div>
+            <div class="images container 6">
+                <img src="./images-boolando/img/6.webp" alt="image6a" class="image sixth-a">
+                <img src="./images-boolando/img/6b.webp" alt="image6b" class="image-b">
+                <p class="green last">Sostenibilita</p>
+                <div class="solid-heart">
+                    <i class="fa-solid fa-heart padding-right"></i>
+                </div>
+                <div class="descripton">
+                    <p class="brand">Esprit</p>
+                    <p class="style">MAGLIONE - BLACK</p>
+                    <p class="d-price">29,99 &euro;</p>
+                </div>
+            </div>
+        </div>
     </main>
-
+    <!-- --------------------------------- -->
     <footer>
+        <div class="footer-container">
+            <div class="footer-info">
+                <h2>Boolando s.r.l</h2>
+                <nav class="nav-footer">
+                    <a href="#">Informazione legali</a>
+                    <a href="#" class="padding-left">Inormativa sulla privacy</a>
+                    <a href="#" class="padding-left">Diritto di recesso</a>
+                </nav>
+            </div>
+            <div class="icon-footer">
+                <p>Trovarci anche su</p>
 
+                <i class="fa-brands fa-square-x-twitter"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-pinterest"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
     </footer>
 
+    <!-- --------------------------------- -->
 
-    
+
 </body>
+
 </html>
