--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="images container 1">
                 <img src="./images-boolando/img/1.webp" alt="image1a" class="image first-a">
                 <img src="./images-boolando/img/1b.webp" alt="image1b" class="image-b">
-                <p class="red">-50%</p>
-                <p class="green">Sostenibilita</p>
+                <p class="red-badge">-50%</p>
+                <p class="green-badge">Sostenibilita</p>
                 <div class="solid-heart">
                     <i class="fa-solid fa-heart padding-right"></i>
                 </div>
@@ -52,7 +52,7 @@
             <div class="images container 2">
                 <img src="./images-boolando/img/2.webp" alt="image2a" class="image second-a">
                 <img src="./images-boolando/img/2b.webp" alt="image2b" class="image-b">
-                <p class="red">-50%</p>
+                <p class="red-badge">-50%</p>
                 <div class="solid-heart">
                     <i class="fa-solid fa-heart padding-right"></i>
                 </div>
@@ -66,7 +66,7 @@
             <div class="images container 3">
                 <img src="./images-boolando/img/3.webp" alt="image3a" class="image third-a">
                 <img src="./images-boolando/img/3b.webp" alt="image3b" class="image-b">
-                <p class="red">-50%</p>
+                <p class="red-badge">-50%</p>
                 <div class="solid-heart">
                     <i class="fa-solid fa-heart padding-right"></i>
                 </div>
@@ -80,8 +80,8 @@
             <div class="images container 4">
                 <img src="./images-boolando/img/4.webp" alt="image4a" class="image forth-a">
                 <img src="./images-boolando/img/4b.webp" alt="image4b" class="image-b">
-                <p class="red">-50%</p>
-                <p class="green">Sostenibilita</p>
+                <p class="red-badge">-50%</p>
+                <p class="green-badge">Sostenibilita</p>
                 <div class="solid-heart">
                     <i class="fa-solid fa-heart padding-right"></i>
                 </div>
@@ -107,7 +107,7 @@
             <div class="images container 6">
                 <img src="./images-boolando/img/6.webp" alt="image6a" class="image sixth-a">
                 <img src="./images-boolando/img/6b.webp" alt="image6b" class="image-b">
-                <p class="green last">Sostenibilita</p>
+                <p class="green-badge last">Sostenibilita</p>
                 <div class="solid-heart">
                     <i class="fa-solid fa-heart padding-right"></i>
                 </div>
